AppDistribuidas/Parcial III/Talleres/app-reservas/deployment/3-auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: app-reservas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: auth-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: app-reservas
spec:
  selector:
    app: auth-service
  ports:
  - port: 4000
    targetPort: 4000
