AppDistribuidas/Parcial III/Talleres/app-reservas/deployment/4-booking.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: app-reservas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service
        image: booking-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: app-reservas
spec:
  selector:
    app: booking-service
  ports:
  - port: 5000
    targetPort: 5000
