AppDistribuidas/Parcial III/Talleres/app-reservas/deployment/5-notification.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: app-reservas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: notification-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5002
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: app-reservas
spec:
  selector:
    app: notification-service
  ports:
  - port: 5002
    targetPort: 5002
