AppDistribuidas/Parcial III/Talleres/app-reservas/deployment/6-user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: app-reservas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: user-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5003
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: app-reservas
spec:
  selector:
    app: user-service
  ports:
  - port: 5003
    targetPort: 5003
